	integrated Devananda's statistics gathering code
	added support for mysql stored procedures
	integrated Devananda's mysql result set updates
	sqlrelay.conf.example installed as $datadir/examples/sqlrelay.conf now
	integrated Andreas Behr's listener crash patch
	removed erroneous reference to sqlrcon_errormessage in php pear db
	another multibyte clob fix

0.37 - integrated Charles Frank's SID code
	fixed bug in configure script where it would erroneously report that
		the MDB tools connection wouldn't be built
	uses (u)int[16|32]_t instead of short/long, etc.
	changed row count, affected rows to use a 64 bit value
	got rid of all plain "int" references in C/C++ api
	single-quotes and backslashes are escaped when using fake input binds
		now
	fixed "integer expression expected" error when running
		configure --disable-python
	changed "connections" to "instance id's" in /etc/sqlrelay
	sqlrsh's help displays help for ping/identify commands
	changed sybase installation instructions to use alien on debian
	de-supported python<2.1
	clob/lob's aren't deleted if their length is 0
	removed lago support
	fixed some bugs in tcl api
	added tcl tests
	implemented native binds for postgresql8, added "fakebinds"
		connectstring parameter to provide back-compatibility
	added configure test for -Wall
	switched lots of:
			char	a[charstring::length(b)];
		to:
			char	*a=new char[charstring::length(b)];
			...
			delete[] a;
		to improve compiler compatibility
	removed #ifdef __GNUC__ around static variable definitions, I'll add
		#ifndefs for compilers that don't allow them (like SCO's) if
		necessary
	fixed bugs where getRow(),getRowAssoc(),getOutputBind(),etc. in various
		api's wouldn't return binary data correctly
	updated mysql dropin api so unsupported functions return unknown-error
		and mysql_error/mysql_errorno work when they do
	updated php pear db code with david forums' patches
	removed references to prepare_tokens/types/etc. and overrode
		freePrepared()