@@ -995,6 +995,11 @@ following.</p>
 
 <blockquote>
 <pre>
+cur-&gt;prepareQuery(<font color="#ff00ff">&quot;call testproc(:in1,:in2,:in3)&quot;</font>);
+cur-&gt;inputBind(<font color="#ff00ff">&quot;in1&quot;</font>,<font color="#ff00ff">1</font>);
+cur-&gt;inputBind(<font color="#ff00ff">&quot;in2&quot;</font>,<font color="#ff00ff">1.1</font>,<font color="#ff00ff">2</font>,<font color="#ff00ff">1</font>);
+cur-&gt;inputBind(<font color="#ff00ff">&quot;in3&quot;</font>,<font color="#ff00ff">&quot;hello&quot;</font>);
+cur-&gt;executeQuery();
 </pre>
 </blockquote>
 
@@ -1280,7 +1285,7 @@ section.  Here's how you can get a single value from a MySQL function.</p>
 
 <blockquote>
 <pre>
-<font color="#a52a2a"><b>create</b></font> <font color="#6a5acd">function</font> testfunc(<font color="#a52a2a"><b>in</b></font> in1 int, <font color="#a52a2a"><b>in</b></font> in2 <font color="#2e8b57"><b>float</b></font>, <font color="#a52a2a"><b>in</b></font> in3 <font color="#2e8b57"><b>varchar</b></font>(<font color="#ff00ff">20</font>)) returns int <font color="#6a5acd">return</font> in1;
+<font color="#a52a2a"><b>create</b></font> <font color="#6a5acd">function</font> testfunc(in1 int, in2 <font color="#2e8b57"><b>float</b></font>, in3 <font color="#2e8b57"><b>varchar</b></font>(<font color="#ff00ff">20</font>)) returns int <font color="#6a5acd">return</font> in1;
 </pre>
 </blockquote>
 
@@ -1289,6 +1294,12 @@ following.</p>
 
 <blockquote>
 <pre>
+cur-&gt;prepareQuery(<font color="#ff00ff">&quot;select testfunc(?,?,?)&quot;</font>);
+cur-&gt;inputBind(<font color="#ff00ff">&quot;1&quot;</font>,<font color="#ff00ff">1</font>);
+cur-&gt;inputBind(<font color="#ff00ff">&quot;2&quot;</font>,<font color="#ff00ff">1.1</font>,<font color="#ff00ff">4</font>,<font color="#ff00ff">2</font>);
+cur-&gt;inputBind(<font color="#ff00ff">&quot;3&quot;</font>,<font color="#ff00ff">&quot;hello&quot;</font>);
+cur-&gt;executeQuery();
+<font color="#2e8b57"><b>char</b></font>    *result=cur-&gt;getField(<font color="#ff00ff">0</font>,<font color="#ff00ff">0</font>);
 </pre>
 </blockquote>
 
@@ -1554,7 +1565,10 @@ set of a MySQL procedure.</p>
 
 <blockquote>
 <pre>
-<font color="#a52a2a"><b>create</b></font> <font color="#6a5acd">procedure</font> testproc(<font color="#a52a2a"><b>in</b></font> in1 int, <font color="#a52a2a"><b>in</b></font> in2 <font color="#2e8b57"><b>float</b></font>, <font color="#a52a2a"><b>in</b></font> in3 <font color="#2e8b57"><b>varchar</b></font>(<font color="#ff00ff">20</font>)) <font color="#6a5acd">begin</font> <font color="#a52a2a"><b>select</b></font> in1, in2, in3; <font color="#6a5acd">end</font>;
+<font color="#a52a2a"><b>create</b></font> <font color="#6a5acd">procedure</font> testproc(<font color="#a52a2a"><b>in</b></font> in1 int, <font color="#a52a2a"><b>in</b></font> in2 <font color="#2e8b57"><b>float</b></font>, <font color="#a52a2a"><b>in</b></font> in3 <font color="#2e8b57"><b>varchar</b></font>(<font color="#ff00ff">20</font>))
+<font color="#6a5acd">begin</font>
+	<font color="#a52a2a"><b>select</b></font> in1, in2, in3;
+<font color="#6a5acd">end</font>;
 </pre>
 </blockquote>
 
@@ -1569,6 +1583,14 @@ following.</p>
 
 <blockquote>
 <pre>
+cur-&gt;prepareQuery(<font color="#ff00ff">&quot;call testproc(:in1,:in2,:in3)&quot;</font>);
+cur-&gt;inputBind(<font color="#ff00ff">&quot;in1&quot;</font>,<font color="#ff00ff">1</font>);
+cur-&gt;inputBind(<font color="#ff00ff">&quot;in2&quot;</font>,<font color="#ff00ff">1.1</font>,<font color="#ff00ff">4</font>,<font color="#ff00ff">2</font>);
+cur-&gt;inputBind(<font color="#ff00ff">&quot;in3&quot;</font>,<font color="#ff00ff">&quot;hello&quot;</font>);
+cur-&gt;executeQuery();
+<font color="#2e8b57"><b>char</b></font>    *out1=cur-&gt;getField(<font color="#ff00ff">0</font>,<font color="#ff00ff">0</font>);
+<font color="#2e8b57"><b>char</b></font>    *out2=cur-&gt;getField(<font color="#ff00ff">0</font>,<font color="#ff00ff">1</font>);
+<font color="#2e8b57"><b>char</b></font>    *out3=cur-&gt;getField(<font color="#ff00ff">0</font>,<font color="#ff00ff">2</font>);
 </pre>
 </blockquote>
 
@@ -1715,17 +1737,21 @@ the following.</p>
 </pre>
 </blockquote>
 
-<p>MySQL 4.1.2 supports native input binds with it's Statement API but the
-Statement API cannot be used to call stored procedures yet.  As a result,
-SQL Relay must fake input binds when calling MySQL stored procedures, so queries
-which call stored procedures must be written with colon-delimited bind
-variables rather than MySQL's native ?'s.</p>
+<p>MySQL 4.1.2 supports native input binds with it's Statement API but the Statement API cannot be used to call stored procedures yet. As a result, SQL Relay must fake input binds when calling MySQL stored procedures, so queries which call stored procedures must be written with colon-delimited bind variables rather than MySQL's native ?'s.</p>
 
 <p>To execute the stored procedure from an SQL Relay program, use code like the
 following.</p>
 
 <blockquote>
 <pre>
+cur-&gt;sendQuery(<font color="#ff00ff">&quot;call testproc()&quot;</font>);
+<font color="#2e8b57"><b>char</b></font>    *field00=cur-&gt;getField(<font color="#ff00ff">0</font>,<font color="#ff00ff">0</font>);
+<font color="#2e8b57"><b>char</b></font>    *field01=cur-&gt;getField(<font color="#ff00ff">0</font>,<font color="#ff00ff">1</font>);
+<font color="#2e8b57"><b>char</b></font>    *field02=cur-&gt;getField(<font color="#ff00ff">0</font>,<font color="#ff00ff">2</font>);
+<font color="#2e8b57"><b>char</b></font>    *field10=cur-&gt;getField(<font color="#ff00ff">1</font>,<font color="#ff00ff">0</font>);
+<font color="#2e8b57"><b>char</b></font>    *field11=cur-&gt;getField(<font color="#ff00ff">1</font>,<font color="#ff00ff">1</font>);
+<font color="#2e8b57"><b>char</b></font>    *field12=cur-&gt;getField(<font color="#ff00ff">1</font>,<font color="#ff00ff">2</font>);
+...
 </pre>
 </blockquote>
 
