@@ -1017,6 +1017,11 @@ following.</p>
 
 <blockquote>
 <pre>
+sqlrcur_prepareQuery(cur,<font color="#ff00ff">&quot;call testproc(:in1,:in2,:in3)&quot;</font>);
+sqlrcur_inputBindLong(cur,<font color="#ff00ff">&quot;in1&quot;</font>,<font color="#ff00ff">1</font>);
+sqlrcur_inputBindDouble(cur,<font color="#ff00ff">&quot;in2&quot;</font>,<font color="#ff00ff">1.1</font>,<font color="#ff00ff">2</font>,<font color="#ff00ff">1</font>);
+sqlrcur_inputBindString(cur,<font color="#ff00ff">&quot;in3&quot;</font>,<font color="#ff00ff">&quot;hello&quot;</font>);
+sqlrcur_executeQuery(cur);
 </pre>
 </blockquote>
 
@@ -1302,7 +1307,7 @@ section.  Here's how you can get a single value from a MySQL function.</p>
 
 <blockquote>
 <pre>
-<font color="#a52a2a"><b>create</b></font> <font color="#6a5acd">function</font> testfunc(<font color="#a52a2a"><b>in</b></font> in1 int, <font color="#a52a2a"><b>in</b></font> in2 <font color="#2e8b57"><b>float</b></font>, <font color="#a52a2a"><b>in</b></font> in3 <font color="#2e8b57"><b>varchar</b></font>(<font color="#ff00ff">20</font>)) returns int <font color="#6a5acd">return</font> in1;
+<font color="#a52a2a"><b>create</b></font> <font color="#6a5acd">function</font> testfunc(in1 int, in2 <font color="#2e8b57"><b>float</b></font>, in3 <font color="#2e8b57"><b>varchar</b></font>(<font color="#ff00ff">20</font>)) returns int <font color="#6a5acd">return</font> in1;
 </pre>
 </blockquote>
 
@@ -1311,6 +1316,12 @@ following.</p>
 
 <blockquote>
 <pre>
+sqlrcur_prepareQuery(cur,<font color="#ff00ff">&quot;select testfunc(?,?,?)&quot;</font>);
+sqlrcur_inputBindLong(cur,<font color="#ff00ff">&quot;1&quot;</font>,<font color="#ff00ff">1</font>);
+sqlrcur_inputBindDouble(cur,<font color="#ff00ff">&quot;2&quot;</font>,<font color="#ff00ff">1.1</font>,<font color="#ff00ff">4</font>,<font color="#ff00ff">2</font>);
+sqlrcur_inputBindString(cur,<font color="#ff00ff">&quot;3&quot;</font>,<font color="#ff00ff">&quot;hello&quot;</font>);
+sqlrcur_executeQuery(cur);
+<font color="#2e8b57"><b>char</b></font>    *result=sqlrcur_getFieldByIndex(cur,<font color="#ff00ff">0</font>,<font color="#ff00ff">0</font>);
 </pre>
 </blockquote>
 
@@ -1577,7 +1588,10 @@ set of a MySQL procedure.</p>
 
 <blockquote>
 <pre>
-<font color="#a52a2a"><b>create</b></font> <font color="#6a5acd">procedure</font> testproc(<font color="#a52a2a"><b>in</b></font> in1 int, <font color="#a52a2a"><b>in</b></font> in2 <font color="#2e8b57"><b>float</b></font>, <font color="#a52a2a"><b>in</b></font> in3 <font color="#2e8b57"><b>varchar</b></font>(<font color="#ff00ff">20</font>)) <font color="#6a5acd">begin</font> <font color="#a52a2a"><b>select</b></font> in1, in2, in3; <font color="#6a5acd">end</font>;
+<font color="#a52a2a"><b>create</b></font> <font color="#6a5acd">procedure</font> testproc(<font color="#a52a2a"><b>in</b></font> in1 int, <font color="#a52a2a"><b>in</b></font> in2 <font color="#2e8b57"><b>float</b></font>, <font color="#a52a2a"><b>in</b></font> in3 <font color="#2e8b57"><b>varchar</b></font>(<font color="#ff00ff">20</font>))
+<font color="#6a5acd">begin</font>
+	<font color="#a52a2a"><b>select</b></font> in1, in2, in3;
+<font color="#6a5acd">end</font>;
 </pre>
 </blockquote>
 
@@ -1592,6 +1606,14 @@ following.</p>
 
 <blockquote>
 <pre>
+sqlrcur_prepareQuery(cur,<font color="#ff00ff">&quot;call testproc(:in1,:in2,:in3)&quot;</font>);
+sqlrcur_inputBindLong(cur,<font color="#ff00ff">&quot;in1&quot;</font>,<font color="#ff00ff">1</font>);
+sqlrcur_inputBindDouble(cur,<font color="#ff00ff">&quot;in2&quot;</font>,<font color="#ff00ff">1.1</font>,<font color="#ff00ff">4</font>,<font color="#ff00ff">2</font>);
+sqlrcur_inputBindString(cur,<font color="#ff00ff">&quot;in3&quot;</font>,<font color="#ff00ff">&quot;hello&quot;</font>);
+sqlrcur_executeQuery(cur);
+<font color="#2e8b57"><b>char</b></font>    *out1=sqlrcur_getFieldByIndex(cur,<font color="#ff00ff">0</font>,<font color="#ff00ff">0</font>);
+<font color="#2e8b57"><b>char</b></font>    *out2=sqlrcur_getFieldByIndex(cur,<font color="#ff00ff">0</font>,<font color="#ff00ff">1</font>);
+<font color="#2e8b57"><b>char</b></font>    *out3=sqlrcur_getFieldByIndex(cur,<font color="#ff00ff">0</font>,<font color="#ff00ff">2</font>);
 </pre>
 </blockquote>
 
@@ -1750,6 +1772,14 @@ following.</p>
 
 <blockquote>
 <pre>
+sqlrcur_sendQuery(cur,<font color="#ff00ff">&quot;call testproc()&quot;</font>);
+<font color="#2e8b57"><b>char</b></font>    *field00=sqlrcur_getFieldByIndex(cur,<font color="#ff00ff">0</font>,<font color="#ff00ff">0</font>);
+<font color="#2e8b57"><b>char</b></font>    *field01=sqlrcur_getFieldByIndex(cur,<font color="#ff00ff">0</font>,<font color="#ff00ff">1</font>);
+<font color="#2e8b57"><b>char</b></font>    *field02=sqlrcur_getFieldByIndex(cur,<font color="#ff00ff">0</font>,<font color="#ff00ff">2</font>);
+<font color="#2e8b57"><b>char</b></font>    *field10=sqlrcur_getFieldByIndex(cur,<font color="#ff00ff">1</font>,<font color="#ff00ff">0</font>);
+<font color="#2e8b57"><b>char</b></font>    *field11=sqlrcur_getFieldByIndex(cur,<font color="#ff00ff">1</font>,<font color="#ff00ff">1</font>);
+<font color="#2e8b57"><b>char</b></font>    *field12=sqlrcur_getFieldByIndex(cur,<font color="#ff00ff">1</font>,<font color="#ff00ff">2</font>);
+...
 </pre>
 </blockquote>
 
